# PMLB_chatbot

./: LICENSE  README.md  pixi.toml  pyproject.toml
chatbot/: labguru_api.py  nlu.py  nlu_llm.py  schema_utils.py
config/: labguru_schema.json
interface/: cli.py
notebooks/: doc.txt
scripts/: test_all_pmlb_specimen.py  test_all_schema.py  test_list_pmlb_cases.py  test_llm_call.py
